--- a/css/style.css
+++ b/css/style.css
@@ -254,12 +254,35 @@ body {
 
 .table{
     width: 98%;
-
     border: 1px solid #f44;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 th{
     background: #000;
     padding: 10px;
     color: #fff;
+}
+
+td{
+    background: #eee;
+    padding: 10px;
+    color: #000;
+}
+
+.search-area{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.searchbox{
+    width: 50%;
+
+    padding: 10px;
+}
+.searchbutton {
+    padding: 10px 50px;
+    cursor: pointer;
 }
