--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ header nav ul li:hover a{
     background: #f2f2f2;
     width: 100%;
     border: 0;
-    margin: 0 0 15px;
+    margin: 15px 0px;
     padding: 15px;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -125,6 +125,7 @@ header nav ul li:hover a{
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
+    margin-top: 10px;
 }
 .form .message {
     margin: 15px 0 0;
@@ -215,6 +216,8 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     display: block;
+    text-align: center;
+
 }
 .main-container{
     margin-left: 250px;
@@ -227,7 +230,9 @@ body {
 
 
 
-
+.login-form{
+   text-align: left;
+}
 
 .transaction li {
     padding: 50px;
@@ -296,4 +301,17 @@ td{
     border-radius: 3px;
     text-align: center;
     margin-top: 100px;
+}
+
+
+#userinfo p,#bookinfo p{
+    background: #F2F2F2;
+    text-align: left;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #222222;
+    font-size: 18px;
+    font-weight: bold;
 }
