--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,6 @@ a,a:hover,a:active,a:focus{
     color : #fff;
 }
 
-.clear{
-    clear: both;
-}
 .header-wrapper{
     width: 100%;
     background: #404040;
@@ -72,7 +69,7 @@ header nav ul li:hover a{
     position: relative;
     z-index: 1;
     background: #FFFFFF;
-    max-width: 500px;
+    max-width: 700px;
     margin: 0 auto 100px;
     padding: 30px;
     border-radius: 3px;
@@ -85,10 +82,7 @@ header nav ul li:hover a{
     height: 150px;
     margin: 0 auto 30px;
     padding: 50px 30px;
-    border-top-left-radius: 100%;
-    border-top-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-    border-bottom-right-radius: 100%;
+    border-radius: 100%;
     box-sizing: border-box;
 }
 .form .thumbnail img {
@@ -102,10 +96,7 @@ header nav ul li:hover a{
     border: 0;
     margin: 15px 0px;
     padding: 15px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-radius: 3px;
     box-sizing: border-box;
     font-size: 14px;
 }
@@ -115,21 +106,14 @@ header nav ul li:hover a{
     width: 100%;
     border: 0;
     padding: 15px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-radius: 3px;
     color: #FFFFFF;
     font-size: 14px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
     cursor: pointer;
     margin-top: 10px;
 }
 .form .message {
     margin: 15px 0 0;
-    color: #b3b3b3;
-    font-size: 12px;
 }
 .form .message a {
     color: #EF3B3A;
